# youtube-expert

./: .env.example  .gitignore  README.md  THUMBNAIL_MASTER_STYLE.md  THUMBNAIL_STYLE_GUIDE.md  THUMBNAIL_WORKFLOW.md  YOUTUBE_EXPERT_KNOWLEDGE.md  YOUTUBE_GROWTH_PLAN.md  create_perfect_thumbnail.py  create_thumbnail_noai.py  create_thumbnail_v5.py  pyproject.toml  requirements.txt  test_expert.py  thumbnail_workflow.py  youtube_expert_skill.py
.github/workflows/: deploy-website.yml
EP28_REBUILD/docs/: REBUILD_PLAN.md  ep28_full.txt  ep28_transcript_with_timestamps.txt
EP28_REBUILD/monitor/: PROMOTION_PLAN.md  ep59_monitor.py  performance_log.json  scheduled_check.py  scheduled_log.json
EP28_REBUILD/scripts/: create_short.py  rebuild_extended.py  rebuild_extended_v2.py  rebuild_highlight.py
EP28_REBUILD/upload/: metadata.json  metadata_optimized.txt  upload_video.py
EP36_REBUILD/: community_posts.md
EP36_REBUILD/scripts/: create_shorts.py  rebuild_remastered.py  rebuild_remastered_v2.py
EP36_REBUILD/transcripts/: ep36_full.json  ep36_segments.txt
adventure-website/: DEPLOY_SETUP.md  SEO_SETUP_GUIDE.md  SETUP.md  build.py  deploy.sh  wrangler.toml
adventure-website/public/: _redirects  app.js  data.js  index.html  robots.txt  sitemap-videos.xml  sitemap.xml  styles.css
adventure-website/public/about/: index.html
adventure-website/public/episodes/: index.html
adventure-website/public/episodes/25000/: index.html
adventure-website/public/episodes/9-c-in-sweden-but-our-hearts-are-already-in-sicily/: index.html
adventure-website/public/sicily-guide/: index.html
adventure-website/src/: channel_data.json
competitor_discovery/: .env.example  README.md  SETUP_INSTRUCTIONS.md  daily_run.py  discover.py  send_report.py
competitor_discovery/data/: seen_channels.json
youtube_expert/: __init__.py  agent_runner.py  cli.py  core.py
youtube_expert/skills/: __init__.py  audience_analyzer.py  base.py  competitor_analyzer.py  content_planner.py  diagnostics.py  growth_projector.py  performance.py  revenue_optimizer.py  seo_optimizer.py  shorts_strategy.py  thumbnail_optimizer.py  trend_detector.py  upload_scheduler.py
(+286 files in other folders)
